# htma

./: .gitignore  CLAUDE.md  CLI_README.md  README.md  github-issues.md  htma-mvp-architecture.md  pyproject.toml
scripts/: demo.py  run_integration_tests.sh
src/htma/: cli.py
src/htma/agent/: __init__.py  agent.py
src/htma/consolidation/: __init__.py  abstraction.py  engine.py  patterns.py
src/htma/core/: __init__.py  exceptions.py  types.py  utils.py
src/htma/curator/: __init__.py  curator.py  extractors.py  linkers.py
src/htma/llm/: __init__.py  client.py
src/htma/llm/prompts/consolidation/: pattern_extraction.txt  pattern_matching.txt  summarization.txt
src/htma/llm/prompts/curator/: conflict_resolution.txt  entity_extraction.txt  fact_extraction.txt  link_evaluation.txt  memory_evolution.txt  salience.txt
src/htma/memory/: __init__.py  episodic.py  interface.py  semantic.py  working.py
src/htma/storage/: __init__.py  chroma.py  sqlite.py
src/htma/storage/migrations/: 001_initial.sql
tests/integration/: README.md  conftest.py  test_full_flow.py
tests/unit/: test_abstraction.py  test_agent.py  test_chroma.py  test_consolidation_engine.py  test_consolidation_full_cycle.py  test_curator.py  test_episodic.py  test_exceptions.py  test_extractors.py  test_linkers.py  test_memory_interface.py  test_ollama_client.py  test_patterns.py  test_semantic.py  test_sqlite.py  test_types.py  test_utils.py  test_working.py
